--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,32 @@
       name="description"
       content="Fast, easy, and reliable medical testing"
     />
+    <script>
+      (function (i, s, o, r, g, v, a, m) {
+        g = v ? g + "?v=" + v : g;
+        i["BrandEmbassy"] = r;
+        i[r] =
+          i[r] ||
+          function () {
+            (i[r].q = i[r].q || []).push(arguments);
+          };
+        i[r].l = +new Date();
+        a = s.createElement(o);
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g + "?" + Math.round(Date.now() / 1000 / 3600);
+        m.parentNode.insertBefore(a, m);
+      })(
+        window,
+        document,
+        "script",
+        "brandembassy",
+        "https://livechat-static-de-na1.niceincontact.com/4/chat.js"
+      );
+
+      brandembassy("init", 1704, "chat_8e6e944b-d861-4892-8d0e-f8008e2e7e32");
+    </script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/q-logo-clean.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
